# anchor-player

./: .prettierignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  tailwind.config.js
src/: App.css  App.tsx  components.tsx  constants.ts  declare.ts  icon.tsx  index.css  info.tsx  setting.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  file_reader.rs  lib.rs  main.rs  music.rs  output.rs  player.rs  state.rs  store.rs
src-tauri/src/output/: default.rs  linux.rs  mod.rs
src/components/: message.tsx  modal.tsx
src/icon/: album-icon.tsx  delete-icon.tsx  icon.css  index.tsx  info-icon.tsx  next-icon.tsx  open-file-icon.tsx  open-folder-icon.tsx  play-icon.tsx  previous-icon.tsx  random-icon.tsx  repeat-icon.tsx  repeat-one-icon.tsx  stop-icon.tsx
src/info/: index.css  index.tsx
